--- a/src/app/_components/offers/offers.html
+++ b/src/app/_components/offers/offers.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div class="offers__list">
+  <div class="offers__list pt-7 ">
     <div class="container">
       <flexmile-list></flexmile-list>
     </div>
