--- a/src/app/_components/utilities/filters/filters.html
+++ b/src/app/_components/utilities/filters/filters.html
@@ -1,6 +1,5 @@
 <div class="filters">
-  <h3>Znajdź auto na wynajem od Flexmile!</h3>
-  {{filtersForm.getRawValue() | json}}
+  <h3 class="pb-4">Znajdź auto na wynajem od Flexmile!</h3>
   <div class="filters__form" [formGroup]=filtersForm>
     <div class="grid mt-0">
       <div class="col-8">
