--- a/src/app/_components/offer/offer.scss
+++ b/src/app/_components/offer/offer.scss
@@ -2,6 +2,7 @@
 
 .offer {
   background: var(--color-black-50);
+  margin-top: 126px;
 
   &__id {
     color: var(--color-black-700);
@@ -109,36 +110,106 @@
 
 }
 
-.offer--info{
-  &-container{
+.offer--info {
+  &-container {
     max-width: 770px;
   }
-  h3{
+
+  h3 {
     font-weight: 600;
     @include mixins.fontSize(32);
     line-height: 40px;
   }
-  .technicals{
-    &-info{
+
+  .technicals {
+    &-info {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 16px;
-      & > div{
+
+      & > div {
         border-radius: 16px;
         background-color: var(--color-black-50);
         padding: 16px 24px;
         display: flex;
         flex-direction: column;
-        span{
+
+        span {
           @include mixins.fontSize(14);
           color: var(--color-black-700);
           line-height: 24px;
           margin-bottom: 4px;
         }
-        b{
+
+        b {
           @include mixins.fontSize(16);
           color: var(--color-black);
           line-height: 24px;
+        }
+      }
+    }
+  }
+}
+
+.equipment {
+  &-list {
+    &--standard {
+      background: var(--color-black-50);
+
+      li {
+        color: var(--color-black-700);
+
+        &:before {
+          background: var(--color-black-700);
+        }
+      }
+    }
+
+    &--additional {
+      background: var(--p-primary-900);
+      & > div{
+        color: var(--color-white);
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 8px;
+      }
+      li {
+        color: var(--color-white);
+        &:before {
+          background: var(--color-white);
+        }
+      }
+    }
+
+    & > div {
+      padding: 40px;
+      border-radius: 24px;
+
+      & > div {
+        font-weight: 500;
+        @include mixins.fontSize(20);
+        line-height: 24px;
+      }
+
+      ul {
+        li {
+          @include mixins.fontSize(16);
+          line-height: 24px;
+          padding-left: 24px;
+          margin-bottom: 4px;
+          position: relative;
+
+          &:before {
+            content: '';
+            position: absolute;
+            height: 4px;
+            width: 4px;
+            border-radius: 50px;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+          }
         }
       }
     }
