--- a/src/app/_components/utilities/filters/filters.scss
+++ b/src/app/_components/utilities/filters/filters.scss
@@ -1,5 +1,11 @@
 @use 'mixins';
 .filters {
+  h3{
+    font-weight: 600;
+    @include mixins.fontSize(32);
+    line-height: 40px;
+    color: var(--color-white);
+  }
   &__price {
     background: var(--color-purple-secondary);
     border-radius: var(--border-radius-base);
