--- a/src/app/_components/offer/offer.scss
+++ b/src/app/_components/offer/offer.scss
@@ -4,6 +4,36 @@
   background: var(--color-black-50);
   margin-top: 126px;
 
+  &--description {
+    h4{
+      font-weight: 500;
+      @include mixins.fontSize(20);
+      line-height: 24px;
+      margin-bottom: 8px;
+    }
+    span{
+      color: var(--color-black-700);
+    }
+    &_item{
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 16px;
+    }
+    &_item-icon{
+      width: 80px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img{
+        display: block;
+        max-width: 50px;
+        height: auto;
+      }
+    }
+  }
+
   &__id {
     color: var(--color-black-700);
     @include mixins.fontSize(12);
@@ -167,15 +197,18 @@
 
     &--additional {
       background: var(--p-primary-900);
-      & > div{
+
+      & > div {
         color: var(--color-white);
         display: flex;
         align-items: center;
         justify-content: flex-start;
         gap: 8px;
       }
+
       li {
         color: var(--color-white);
+
         &:before {
           background: var(--color-white);
         }
