--- a/src/app/_components/utilities/banner-list/banner-list.scss
+++ b/src/app/_components/utilities/banner-list/banner-list.scss
@@ -1,12 +1,18 @@
 @use "mixins";
 
 .list-banner {
-  padding: 40px 0;
   border-radius: 24px;
-  @include mixins.fontSize(32);
+
   font-weight: 600;
   white-space: pre;
-
+  &.large{
+    padding: 40px 0;
+    @include mixins.fontSize(32);
+  }
+  &.small{
+    padding: 27px 0;
+    @include mixins.fontSize(24);
+  }
   &--label {
     color: var(--color-white);
 
