--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -4,11 +4,14 @@
     <div class="home-offers--header flex align-items-start justify-content-between pb-5">
       <div>
         <h2 class="mb-3">Nowe samochody od Flexmile!</h2>
-        <span class="block">Tylko stała miesięczna rata – bez dodatkowych kosztów za ubezpieczenie, serwis czy opony.</span>
-        <span class="block">Wybierz nowy samochód i ciesz się pełnym komfortem jazdy bez niespodzianek i ukrytych opłat.</span>
+        <span
+          class="block">Tylko stała miesięczna rata – bez dodatkowych kosztów za ubezpieczenie, serwis czy opony.</span>
+        <span
+          class="block">Wybierz nowy samochód i ciesz się pełnym komfortem jazdy bez niespodzianek i ukrytych opłat.</span>
       </div>
       <div>
-        <flexmile-link title="Pokaż pełną ofertę" url="/list" icon="pi-arrow-right" iconPosition="right"></flexmile-link>
+        <flexmile-link title="Pokaż pełną ofertę" url="/list" icon="pi-arrow-right"
+                       iconPosition="right"></flexmile-link>
       </div>
     </div>
     <div class="home-offers--list">
@@ -16,3 +19,5 @@
     </div>
   </div>
 </div>
+<flexmile-why-us></flexmile-why-us>
+<flexmile-faq></flexmile-faq>
