--- a/src/app/_components/utilities/footer/footer.html
+++ b/src/app/_components/utilities/footer/footer.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <div class="grid mt-0">
+      <div class="col-7">
+      left
+      </div>
+      <div class="col-5">
+        <flexmile-contact-form></flexmile-contact-form>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+
