--- a/src/app/_components/utilities/input/input.scss
+++ b/src/app/_components/utilities/input/input.scss
@@ -1,34 +1,151 @@
 @use 'mixins';
 
+// -------------------------------------
+// Label
+// -------------------------------------
 label {
   font-weight: 700;
   @include mixins.fontSize(14);
 }
 
+// -------------------------------------
+// Inputs & Textareas
+// -------------------------------------
 .has-error {
-  input.f-input, textarea.f-textarea {
+  input.f-input,
+  textarea.f-textarea {
     border-color: var(--red-500);
   }
 }
-input.f-input{
+
+input.f-input {
   max-height: 51px;
+  border-radius: 40px;
 }
-input.f-input, textarea.f-textarea {
+
+textarea.f-textarea {
+  border-radius: 24px;
+}
+
+input.f-input,
+textarea.f-textarea {
   background: var(--color-white);
   border: 1px solid var(--color-white);
-  border-radius: 40px;
   color: var(--color-black);
   @include mixins.fontSize(16);
   outline: none !important;
   max-width: 100%;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+// -------------------------------------
+// Number Input Fixes
+// -------------------------------------
+input {
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  &[type='number'] {
+    -moz-appearance: textfield;
+  }
 }
 
-input[type=number] {
-  -moz-appearance: textfield;
+// -------------------------------------
+// Checkbox
+// -------------------------------------
+.checkbox-wrapper {
+  *,
+  ::after,
+  ::before {
+    box-sizing: border-box;
+  }
+
+  [type='checkbox'] {
+    margin: 0;
+    width: 0;
+    height: 0;
+    display: inline;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    + label {
+      -webkit-user-select: none;
+      user-select: none;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      font-weight: 400;
+      @include mixins.fontSize(12);
+      line-height: 18px;
+      cursor: pointer;
+      &::before {
+        content: "";
+        display: inline-block;
+        vertical-align: top;
+        min-height: 20px;
+        max-height: 20px;
+        min-width: 20px;
+        max-width: 20px;
+        margin-right: 12px;
+        color: rgba(0, 0, 0, 0.275);
+        border: 1px solid #B8B8B8;
+        border-radius: 6px;
+        background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="%23863087" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>')
+        no-repeat center, white;
+        background-size: 0;
+        will-change: color, border, background, background-size, box-shadow;
+        transform: translate3d(0, 0, 0);
+        transition: color 0.1s, border 0.1s, background 0.15s, box-shadow 0.1s;
+        box-shadow:
+          0 0 0.04em,
+          0 0.06em 0.16em -0.03em inset,
+          0 0 0 0.07em transparent inset;
+      }
+    }
+
+    &:enabled {
+      &:active + label::before,
+      + label:active::before {
+        box-shadow:
+          0 0 0.04em,
+          0 0.06em 0.16em -0.03em transparent inset,
+          0 0 0 0.07em rgba(0, 0, 0, 0.1) inset;
+        background-color: #f0f0f0;
+      }
+    }
+
+    &:checked {
+      + label::before {
+        background-color: #D9DF73;
+        background-size: 0.75em;
+        color: rgba(0, 0, 0, 0.075);
+      }
+
+      &:enabled {
+        &:active + label::before,
+        + label:active::before {
+          background-color: #D9DF73;
+          color: rgba(0, 0, 0, 0.275);
+        }
+      }
+    }
+
+    &:focus {
+      + label::before {
+        box-shadow: none;
+      }
+
+      &:active + label::before,
+      + label:active::before {
+        box-shadow: none;
+      }
+    }
+
+    &:disabled + label::before {
+      opacity: 0.5;
+    }
+  }
 }
