--- a/public/layout/scss/_variables.scss
+++ b/public/layout/scss/_variables.scss
@@ -32,6 +32,7 @@
   --color-purple-400: #C084FC;
   --color-purple-500: #C296C1;
   --color-purple-600: #9333EA;
+  --color-purple-700: #A266A0;
   --color-purple-800: #6B21A8;
   --color-purple-900: #581C87;
   --color-purple-950: #3B0764;
