--- a/src/app/_components/utilities/dropdown/dropdown.html
+++ b/src/app/_components/utilities/dropdown/dropdown.html
@@ -26,16 +26,23 @@
   </button>
 
   @if (isOpen()) {
-    <div
-      class="dropdown-menu"
-      role="listbox">
-      @for (option of options(); track option.value; let idx = $index) {
+    <div class="dropdown-menu" role="listbox">
+      @if(!hideSearch()){
+        <div class="dropdown-search">
+          <input
+            type="text"
+            placeholder="Szukaj..."
+            (input)="searchQuery.set(($any($event.target).value || '').trim())"
+            (keydown.escape)="closeDropdown()"
+          />
+        </div>
+      }
+      @for (option of filteredOptions(); track option.value; let idx = $index) {
         <div
           class="dropdown-item"
           role="option"
           [class.selected]="option.value === selectedValue()"
           [class.focused]="idx === focusedIndex()"
-          [attr.aria-selected]="option.value === selectedValue()"
           (click)="selectOption(option)"
           (mouseenter)="setFocusedIndex(idx)">
           {{ option.label }}
